@@ -24,10 +24,11 @@
  */
 
 /**
+ * RecordMemberTests
+ *
  * @test
- * @bug 8246774
- * @summary test several assertions on record classes members
- * @run testng RecordMemberTests
+ * @compile --enable-preview -source ${jdk.version} RecordMemberTests.java
+ * @run testng/othervm --enable-preview RecordMemberTests
  */
 
 import java.lang.reflect.Constructor;
